@@ -1,3 +1,8 @@
+2013-06-05  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Removing broken attempt at histoDir() caching which led to all
+	histograms being registered under the same analysis name.
+
 2013-06-04  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Updating the Cython version requirement to 0.18
